# DGtalTests

./: .gitignore  CMakeLists.txt  README.md  board2d.cpp  helloworld.cpp  thresholder.cpp
foam/: CMakeLists.txt  extract.cpp
foamutils/: CMakeLists.txt  crop.py  crop_threshold.py  foamutils.cpp  foamutils.py  foamutils_ext.cpp  histo.py  setup.py  test.py
tests/: CMakeLists.txt  dgtalcountedpointer.cpp  itkregion.cpp  itksmartpointer.cpp  programoptions.cpp  thresholder.cpp
